un poquito de orden

--- a/tateti.html
+++ b/tateti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tateti.css">
+    <link rel="stylesheet" href="/estilos/tateti.css">
     <title>Tateti</title>
 </head>
 <body>
@@ -21,6 +21,6 @@
     </div>
     <p id="ganador"></p>
     <button onclick="limpiarTablero()">Reiniciar</button>
-    <script src="tateti.js"></script>
+    <script src="/scripts/tateti.js"></script>
 </body>
 </html>
